--- a/angrycherry.html
+++ b/angrycherry.html
@@ -11,165 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="index.css">
-    <title>Bhawna</title>
-</head>
-
-<body>
-    <header>
-        <div class="nav">
-            <ul>
-                <li><a href="http://chandransh.42web.io">Home</a></li>
-                <li>Projects</li>
-                <li>Music</li>
-                <li>About</li>
-            </ul>
-        </div>
-    </header>
-    <div class="greet">
-        Hi babe,
-    </div>
-    <div class="content">
-        <div>As I sit down to write this, I'm flooded with emotions and memories of our time together. It's been a while
-            since we last spoke, but there isn't a day that goes by when I don't think about you.
-        </div>
-        <div>When we first met, I never imagined that "we" would be such an important part of my life. You
-            brought so much joy, laughter, and love into my world. I still remember the way your smile lit up the room,
-            and how your touch made me feel like I was the only person in the world that mattered. <br><br>
-            Our relationship may have ended, but the love that we shared will always hold a special place in my heart.
-            It's hard to put into words just how much you meant to me, and how much I miss you.</div>
-        <a href="http://">
-            <div></div>
-        </a>
-        <div>Even though we are no longer together, I want you to know that I still care about you deeply. I hope that
-            you are doing well, and that life is treating you kindly. I want nothing but the best for you, and I hope
-            that you find happiness and love wherever you go.</div>
-        <div id="a">It all started like</div>
-    </div>
-
-    <div class="base-container">
-        <div class="friend-text-div">
-            <img src='336213553_954002209293489_3505798107381739690_n.jpg' />
-            <div class="friend-text-container">
-                <div class="friend-text">Hey!</div>
-                <div class="friend-text">I am bhawna's friend __ nd I've followed ur acct for a reason 👉🏻👈🏻</div>
-                <div class="friend-text">can I ask u something?</div>
-            </div>
-        </div>
-        <div class="my-text-div">
-            <div class="my-text-container">
-                <div class="my-text">what?</div>
-            </div>
-        </div>
-        <div class="content">
-            <div id="b">Life was sooo sooo good...You made it better</div>
-        </div>
-
-        <a href="https://www.instagram.com/just_bhawnaa">
-            <div class="chat">
-                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
-                <div class="uid">
-                    <div class="namel">Bhawna❤‍🔥</div>
-                    <div class="msgs">I love you too ⋅ 1 m</div>
-                </div>
-                <div class="dot"></div>
-            </div>
-        </a>
-        <a href="https://www.instagram.com/just_bhawnaa">
-            <div class="chat">
-                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
-                <div class="uid">
-                    <div class="namel">Bhawna🥀</div>
-                    <div class="msgs">9+ new messages ⋅ 5 s</div>
-                </div>
-                <div class="dot"></div>
-            </div>
-        </a>
-        <a href="https://www.instagram.com/just_bhawnaa">
-            <div class="chat">
-                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
-                <div class="uid">
-                    <div class="namel">Bhawna🦋</div>
-                    <div class="msgs">Mentioned you in their story ⋅ now</div>
-                </div>
-                <div class="dot"></div>
-            </div>
-        </a>
-        <a href="https://www.instagram.com/just_bhawnaa">
-            <div class="chat">
-                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
-                <div class="uid">
-                    <div class="namel">Bhawna✨</div>
-                    <div class="msgs">Sent you a message ⋅ now</div>
-                </div>
-                <div class="dotv">⯈ Play Video</div>
-            </div>
-        </a>
-        <a href="https://www.instagram.com/just_bhawnaa">
-            <div class="chat">
-                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
-                <div class="uid">
-                    <div class="name">Bhawna</div>
-                    <div class="msg">liked a message ⋅ 10 m</div>
-                </div>
-            </div>
-        </a>
-        <a href="https://www.instagram.com/just_bhawnaa">
-            <div class="chat">
-                <div class="pfp"><img src="Default_pfp.svg.png" alt=""></div>
-                <div class="uid">
-                    <div class="name">Instagram User</div>
-                    <div class="msg">I'm really sorry ⋅ 2 s</div>
-                </div>
-            </div>
-        </a>
-        <a href="https://www.instagram.com/just_bhawnaa">
-            <div class="chat">
-                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
-                <div class="uid">
-                    <div class="name">Bhawna🍷</div>
-                    <div class="msg">Seen ⋅ 32 w</div>
-                </div>
-            </div>
-        </a>
-        <section>
-            <div class="card">
-                <div class="face">
-                    <h3>Ruhii</h3>
-                    <h6>+91*********1</h6>
-                    <div class="icon-content">
-                        <div style="text-align: center;">
-                            <i class="far fa-clock"><span class="material-symbols-outlined">
-                                    notifications_active
-                                </span></i>
-
-                            <h5>Remind me</h5>
-                        </div>
-                        <div style="text-align: center;">
-                            <i class="fas fa-comment">
-                                <span class="material-symbols-outlined">
-                                    chat_bubble
-                                </span>
-                            </i>
-                            <h5>Message</h5>
-                        </div>
-                    </div>
-                    <div class="slide-content">
-                        <div class="ball"></div>
-                        <h5>Slide to answer ></h5>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <div class="bodi">
-            <span class="prompt">
-                YOUR VOICE &lt;3
-            </span>
-        </div>
-
-</body>
-<style>
-* {
+    <style>
+    * {
     margin: 0%;
     padding: 0%;
     border: 0%;
@@ -446,7 +289,7 @@ section {
     border-width: 0.1px;
     border-style: solid;
     border-color: rgba(255, 255, 255, 0.425);
-
+    outline: 0.4rem solid white;
 }
 
 .slide-content {
@@ -522,9 +365,180 @@ h5 {
     writing-mode: vertical-rl;
     text-orientation: mixed;
     font-size: 5rem;
-    margin: 0 0 0 50%;
+    margin: 20vh 0px 0 50%;
     height: max-content;
     transform: translateX(-50%);
 }
+
+.notch {
+    width: 40%;
+    height: 0.6rem;
+    background: white;
+    border-radius: 1rem;
+    transform: translateX(-50%);
+    margin: 5% 0 0 50%;
+    position: absolute;
+}
 </style>
+    <title>Bhawna</title>
+</head>
+
+<body>
+    <header>
+        <div class="nav">
+            <ul>
+                <li><a href="http://chandransh.42web.io">Home</a></li>
+                <li>Projects</li>
+                <li>Music</li>
+                <li>About</li>
+            </ul>
+        </div>
+    </header>
+    <div class="greet">
+        Hi babe,
+    </div>
+    <div class="content">
+        <div>As I sit down to write this, I'm flooded with emotions and memories of our time together. It's been a while
+            since we last spoke, but there isn't a day that goes by when I don't think about you.
+        </div>
+        <div>When we first met, I never imagined that "we" would be such an important part of my life. You
+            brought so much joy, laughter, and love into my world. I still remember the way your smile lit up the room,
+            and how your touch made me feel like I was the only person in the world that mattered. <br><br>
+            Our relationship may have ended, but the love that we shared will always hold a special place in my heart.
+            It's hard to put into words just how much you meant to me, and how much I miss you.</div>
+        <a href="http://">
+            <div></div>
+        </a>
+        <div>Even though we are no longer together, I want you to know that I still care about you deeply. I hope that
+            you are doing well, and that life is treating you kindly. I want nothing but the best for you, and I hope
+            that you find happiness and love wherever you go.</div>
+        <div id="a">It all started like</div>
+    </div>
+
+    <div class="base-container">
+        <div class="friend-text-div">
+            <img src='336213553_954002209293489_3505798107381739690_n.jpg' />
+            <div class="friend-text-container">
+                <div class="friend-text">Hey!</div>
+                <div class="friend-text">I am bhawna's friend __ nd I've followed ur acct for a reason 👉🏻👈🏻</div>
+                <div class="friend-text">can I ask u something?</div>
+            </div>
+        </div>
+        <div class="my-text-div">
+            <div class="my-text-container">
+                <div class="my-text">what?</div>
+            </div>
+        </div>
+        <div class="content">
+            <div id="b">Life was sooo sooo good...You made it better</div>
+        </div>
+
+        <a href="https://www.instagram.com/just_bhawnaa">
+            <div class="chat">
+                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
+                <div class="uid">
+                    <div class="namel">Bhawna❤‍🔥</div>
+                    <div class="msgs">I love you too ⋅ 1 m</div>
+                </div>
+                <div class="dot"></div>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/just_bhawnaa">
+            <div class="chat">
+                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
+                <div class="uid">
+                    <div class="namel">Bhawna🥀</div>
+                    <div class="msgs">9+ new messages ⋅ 5 s</div>
+                </div>
+                <div class="dot"></div>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/just_bhawnaa">
+            <div class="chat">
+                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
+                <div class="uid">
+                    <div class="namel">Bhawna🦋</div>
+                    <div class="msgs">Mentioned you in their story ⋅ now</div>
+                </div>
+                <div class="dot"></div>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/just_bhawnaa">
+            <div class="chat">
+                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
+                <div class="uid">
+                    <div class="namel">Bhawna✨</div>
+                    <div class="msgs">Sent you a message ⋅ now</div>
+                </div>
+                <div class="dotv">⯈ Play Video</div>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/just_bhawnaa">
+            <div class="chat">
+                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
+                <div class="uid">
+                    <div class="name">Bhawna</div>
+                    <div class="msg">liked a message ⋅ 10 m</div>
+                </div>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/just_bhawnaa">
+            <div class="chat">
+                <div class="pfp"><img src="Default_pfp.svg.png" alt=""></div>
+                <div class="uid">
+                    <div class="name">Instagram User</div>
+                    <div class="msg">I'm really sorry ⋅ 2 s</div>
+                </div>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/just_bhawnaa">
+            <div class="chat">
+                <div class="pfp"><img src="bpfp.jpg" alt=""></div>
+                <div class="uid">
+                    <div class="name">Bhawna🍷</div>
+                    <div class="msg">Seen ⋅ 32 w</div>
+                </div>
+            </div>
+        </a>
+        <div class="bodi">
+            <span class="prompt">
+                YOUR VOICE &lt;3
+            </span>
+        </div>
+        <section>
+            <div class="card">
+                <div class="face">
+                    <h3>Ruhii</h3>
+                    <h6>+91*********1</h6>
+                    <div class="icon-content">
+                        <div style="text-align: center;">
+                            <i class="far fa-clock"><span class="material-symbols-outlined">
+                                    notifications_active
+                                </span></i>
+
+                            <h5>Remind me</h5>
+                        </div>
+                        <div style="text-align: center;">
+                            <i class="fas fa-comment">
+                                <span class="material-symbols-outlined">
+                                    chat_bubble
+                                </span>
+                            </i>
+                            <h5>Message</h5>
+                        </div>
+                    </div>
+                    <div class="slide-content">
+                        <div class="ball"></div>
+                        <h5>Slide to answer ></h5>
+                    </div>
+                    <div class="notch"></div>
+                </div>
+            </div>
+        </section>
+
+        <span class="prompt">
+            I REALLY MISS THE WAY WE USED TO TALK &nbsp;&nbsp; Ó╭╮Ò
+        </span>
+</body>
+
 </html>
