--- a/index.html
+++ b/index.html
@@ -205,5 +205,5 @@ Mail
 </a>
 </div>
 </body>
-t<script>function checkInput(){"bhawna"===document.getElementById("inputBox").value.toLowerCase()?window.location.href="https://anawnimus.github.io/cupcake/angrycherry.html":(document.getElementById("inputBox").remove(),document.getElementById("buton").remove(),document.getElementById("heading").innerHTML="You are not special")}</script>
+t<script>function checkInput(){"bhawna"===document.getElementById("inputBox").value.toLowerCase()?window.location.href="https://anawnimus.github.io/cupcake/angrycherry.html":(document.getElementById("inputBox").remove(),document.getElementById("buton").remove(),document.getElementById("heading").innerHTML="Sahi sa code daalo")}</script>
 </html>
