--- a/index.html
+++ b/index.html
@@ -304,7 +304,9 @@ function checkInput() {
             break;
 
         case "tesla":
-            bonas("Rewati di aka celebrity (one I love most)🫣❤‍🔥! Best sis ever in history!")
+            bonas("Rewati di aka celebrity (one I love most)🫣❤‍🔥! Best sis in history!")
+            document.getElementById("inputBox").remove();
+            document.getElementById("buton").remove();
             break;
 
         case "ityadita":
