--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@ svg {
         width: max-content;
         padding: 4%;
     }
+    
+    #heading{
+        text-align: center;
+    }
 }
         </style>
 
