--- a/index.html
+++ b/index.html
@@ -318,6 +318,13 @@ function checkInput() {
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
             break;
+            
+            case "anish":
+            bonas("Kya ji bolu!!")
+            document.getElementById("inputBox").remove();
+            document.getElementById("buton").remove();
+            break;
+
 
         default:
             // document.getElementById("inputBox").remove();
