--- a/index.html
+++ b/index.html
@@ -299,32 +299,34 @@ function checkInput() {
     switch (input.toLowerCase()) {
         case "ruhi":
             window.location.href = "https://anawnimus.github.io/cupcake/angrycherry.html";
-            bonas("*Speechless* 🫣")
+            bonas("*Speechless* 🫣");
             break;
 
         case "chandransh" || "chandu":
-            window.location.href = "https://www.chandransh.42web.io/"
-            bonas("Damn 🫣")
+            window.location.href = "https://www.chandransh.42web.io/";
+            bonas("Damn 🫣");
             break;
 
         case "tesla":
-            bonas("Rewati di aka celebrity (one I love most)🫣❤‍🔥! Best sis in history!")
+            bonas("Rewati di aka celebrity (one I love most)🫣❤‍🔥! Best sis in history!");
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
             break;
 
         case "ityadita":
-            bonas("ab nhi daalne dunga kuch")
+            bonas("ab nhi daalne dunga kuch");
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
             break;
             
             case "anish":
-            bonas("Kya ji bolu!!")
+            bonas("Kya ji bolu!!");
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
             break;
-
+            
+        case "niharika":
+            bonas("Areyy didi 🙏");
 
         default:
             // document.getElementById("inputBox").remove();
