--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@ function checkInput() {
             
         case "niharika":
             bonas("Areyy didi 🙏");
+            break;
 
         default:
             // document.getElementById("inputBox").remove();
