--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ function checkInput() {
             break;
             
         case "niharika":
-            bonas("Areyy didi 🙏");
+            bonas("Areyy didi 🙏 dhanya ho aap");
             break;
 
         default:
