--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@ function checkInput() {
             break;
 
         case "ityadita":
-            bonas("ab nhi daalne dunga kuch");
+            bonas("ab nhi daalne dunga kuch \n bohot misuse kr lia");
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
             break;
             
-            case "anish":
+        case "anish":
             bonas("Kya ji bolu!!");
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
