--- a/index.html
+++ b/index.html
@@ -398,10 +398,12 @@ function checkInput() {
 
         case "bhawna":
             bonas(`Ek he toh 🫀 hai kitni bar churaoge`);
+            document.getElementById('heading').innerHTML = "Bonus 🫣";
             document.getElementById("inputBox").value = "wish we were together";
             break;
 
         case 'wish we were together':
+            document.getElementById('heading').innerHTML = "Bonus 🫀";
             bonas('ab kya jaan legi 🗿 vaise he ghaayal kr rkha hai 😳');
             document.getElementById("inputBox").value = "ruhi";
             break;
