--- a/index.html
+++ b/index.html
@@ -434,6 +434,16 @@ function checkInput() {
             a = document.getElementById('lynk').remove();
             bonas('I am sorry if you don\'t have a private key. If you need one, I will give you');
             break;
+            
+        case 'sahil':
+            document.getElementById('heading').innerHTML = "Arey bhoy jaan 🗿";
+            bonas('Super Dotteddddddddd');
+            a = document.getElementById('lynk').remove();
+            a = document.getElementById('lynk').remove();
+            a = document.getElementById('lynk').remove();
+            a = document.getElementById('lynk').remove();
+            a = document.getElementById('lynk').remove();
+            break;
 
         default:
             var heading = document.getElementById("heading");
