--- a/index.html
+++ b/index.html
@@ -394,6 +394,12 @@ function checkInput() {
             location.href = "https://www.chandransh.42web.io/";
             bonas("Damn 🫣");
             break;
+            
+        case "khushi":
+            bonas("I like you!!");
+            bonas("I like you little more!!");
+            location.href = "https://anawnimus.github.io/cupcake/snv.html";
+            break;
 
         case "tesla":
             bonas("Rewati di aka celebrity (one I love most)🫣❤‍🔥! Best sis in history!");
@@ -409,21 +415,17 @@ function checkInput() {
 
         case 'wish we were together':
             document.getElementById('heading').innerHTML = "Bonus 🫀";
-            bonas('ab kya jaan legi 🗿  hint: Your 4 letter nickname');
+            bonas('ab kya jaan logey 🗿  hint: Your 4 letter nickname');
             document.getElementById("inputBox").value = "";
             break;
 
         case "ityadita":
-            document.getElementById('heading').innerHTML = "Bye!";
-            bonas("bas bohot hoo gya \n bohot misuse kr lia enough internet for today ! ");
+            document.getElementById('heading').innerHTML = "Byei!!!";
+            bonas("Arey Negi G :D Hau aar yeu 🥲");
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
             break;
 
-        case "niharika":
-            document.getElementById('heading').innerHTML = "Bonus";
-            bonas("Ab kaise krra hai kaam!!");
-            break;
 
         case 'help':
             document.getElementById('heading').innerHTML = "Help";
