--- a/angrycherry.html
+++ b/angrycherry.html
@@ -61,7 +61,7 @@ header {
     display: flex;
     justify-content: center;
     background-color: rgb(255 255 255 / 64%);
-    padding: 16px 0;
+    padding: 2rem 0;
     box-shadow: 0px -6px 20px 0 rgb(0 0 0 / 34%);
     backdrop-filter: blur(5px);
     width: 100svw;
@@ -385,14 +385,6 @@ h5 {
 
 <body>
     <header>
-        <div class="nav">
-            <ul>
-                <li><a href="http://chandransh.42web.io">Home</a></li>
-                <li>Projects</li>
-                <li>Music</li>
-                <li>About</li>
-            </ul>
-        </div>
     </header>
     <div class="greet">
         Hi babe,
