--- a/angrycherry.html
+++ b/angrycherry.html
@@ -54,7 +54,7 @@
     font-family: 'Righteous', cursive;
 }
 
-header {
+/*header {
     z-index: 10;
     top: 0;
     position: fixed;
@@ -65,7 +65,7 @@ header {
     box-shadow: 0px -6px 20px 0 rgb(0 0 0 / 34%);
     backdrop-filter: blur(5px);
     width: 100svw;
-}
+}*/
 
 html {
     background-color: #faebd7;
@@ -384,8 +384,8 @@ h5 {
 </head>
 
 <body>
-    <header>
-    </header>
+    /* <header>
+    </header> */
     <div class="greet">
         Hi babe,
     </div>
