--- a/angrycherry.html
+++ b/angrycherry.html
@@ -47,11 +47,13 @@
 } */
 
 .greet {
-    display: table;
+    display: flex;
     margin: auto;
     font-size: 2rem;
-    margin-top: 20dvh;
+    margin-top: 35dvh;
+    margin-bottom: 35vh;
     font-family: 'Righteous', cursive;
+    justify-content: center;
 }
 
 /*header {
@@ -384,8 +386,6 @@ h5 {
 </head>
 
 <body>
-    /* <header>
-    </header> */
     <div class="greet">
         Hi babe,
     </div>
