--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ transition:500ms cubic-bezier(0.18,0.89,0.32,1.28)
             </g>
         </g>
     </svg>
-    <h1>CHANDRANSH</h1>
+    <h1 id="chandransh007">CHANDRANSH</h1>
     <div class="face">
         <a id="lynk" class="lynk" href="https://www.snapchat.com/add/chandransh.7?share_id=Lhr9coAv-LU&locale=en-GB">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.82687 -19.71145 102.49954 118.2687">
@@ -424,6 +424,12 @@ function checkInput() {
             bonas("Arey Negi G :D Hau aar yeu 🥲");
             document.getElementById("inputBox").remove();
             document.getElementById("buton").remove();
+            document.getElementById('lynk').remove();
+            document.getElementById('lynk').remove();
+            document.getElementById('lynk').remove();
+            document.getElementById('lynk').remove();
+            document.getElementById('lynk').remove();
+            document.getElementById('chandransh007').innerHTML="Negi G";
             break;
 
 
